ServiceEntry-and-WorkloadEntry/04-Egress-Gateway/05-virtualservice-weighted-based-routing.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx-external
spec:
  hosts:
  - nginx.magedu.com
  gateways:
  - egress-gateway
  - mesh
  http:
  - match:
    - gateways:
      - mesh
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
  - match:
    - gateways:
      - egress-gateway
    route:
    - destination:
        host: nginx.magedu.com
        subset: v26
      weight: 5
    - destination:
        host: nginx.magedu.com
        subset: v25
      weight: 95
